# streamlit-dashboard-sample

./: Makefile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
static/: style.css
