[tool.poetry]
name = "streamlit-dashboard-sample"
version = "0.1.0"
description = ""
authors = ["hato0501 <k.harada.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
streamlit = "^1.29.0"
streamlit-option-menu = "^0.3.6"
streamlit-shadcn-ui = "^0.1.18"
plotly = "^5.18.0"
scipy = "^1.11.4"
streamlit-antd-components = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
